# OpenCV_Projects

./: .gitattributes  .gitignore  README.md  color_balance  optical_flow  tags  template_matching
c++/ball_tracking_with_kalman_filter/: CMakeLists.txt  ball_tracking_with_kalman_filter.cpp
c++/color_balance/: CMakeLists.txt  color_balance.cpp  tmp.cpp
c++/face_landmark_stabilization/: .face_landmark_stabilization.cpp.swp  CMakeLists.txt  face_landmark_stabilization.cpp
c++/face_tracker/: face_tracker.cpp
c++/faces_tracker/: CMakeLists.txt  faces_tracker.cpp
c++/faces_tracker/config/: tracker_conf.ini
c++/flood_fill/: CMakeLists.txt  README.md  flood_fill.cpp
c++/mastering_opencv4/: .gitattributes  Mastering OpenCV 4.md  README.md
c++/mastering_opencv4/carplates/: ANPR  CMakeLists.txt  detect_regions.cpp  detect_regions.hpp  main.cpp  ocr.cpp  ocr.hpp  plate.cpp  plate.hpp  prepare_svm_training_data.cpp  svm.xml
c++/mastering_opencv4/cartoonifier/: CMakeLists.txt  cartoon.cpp  cartoon.hpp  fps_timer.hpp  main.cpp
c++/mastering_opencv4/landmarks/: CMakeLists.txt  demo.cpp  main.cpp
c++/optical_flow/: CMakeLists.txt  optical_flow.cpp
c++/perspective_transform/: perspective_transform.cpp
c++/read_write_video/: CMakeLists.txt  read_write_video.cpp
c++/template_matching/: CMakeLists.txt  template_matching.cpp
resources/: mouth.xml  nose.xml
